- use JDK 22 to build MediathekView on github - optimize Lucene indexer and search by using modern Lucene features - bump library versions